k8s_app/nginx/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  namespace: nginx-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-nginx
